fix contrast ratio for elements

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -157,7 +157,7 @@
 }
 
 .footer.block .footer-links a {
-  color: #d1d1d1;
+  color: var(--color-footer-gray);
   transition: 0.3s;
   line-height: 138%;
   width: 100%;
