--- a/blocks/i-lens/i-lens.css
+++ b/blocks/i-lens/i-lens.css
@@ -235,7 +235,7 @@
 }
 
 .block.i-lens .i-lens-body .box .value.green {
-    color: var(--color-green);
+    color: var(--color-dark-green);
 }
 
 .block.i-lens .i-lens-body .box .value.red {
