--- a/blocks/market-insight/market-insight.css
+++ b/blocks/market-insight/market-insight.css
@@ -97,7 +97,7 @@
   margin-bottom: 0;
   font-size: var(--heading-font-size-xxs);
   line-height: normal;
-  color: var(--text-color-gray);
+  color: var(--color-gray-dark);
 }
 
 .block.market-insight .cards-powerby .socialshare {
