--- a/blocks/multi-panel-carousel/multi-panel-carousel.css
+++ b/blocks/multi-panel-carousel/multi-panel-carousel.css
@@ -60,7 +60,7 @@
 }
 
 .block.carousel-section .carousel-highlight.green-highlight p strong {
-   color: var(--color-light-green);
+   color: var(--color-dark-green);
    font-weight: var(--font-weight-regular);
 }
 
@@ -369,7 +369,7 @@
 }
 
 .block.carousel-section .carousel-slider .box .label-value.positive {
-    color: var(--color-green)
+    color: var(--color-dark-green)
 }
 
 .block.carousel-section .carousel-slider .box .label-value.negative {
@@ -479,7 +479,7 @@
 }
 
 .block.carousel-section .carousel-slider .box .box-footer .btn.btn-buy {
-    background-color: var(--color-green);
+    background-color: var(--color-dark-green);
 }
 
 .block.carousel-section .carousel-slider .box .box-footer .btn.disabled {
